--- a/05_R_apply_family/Lecture_5_apply_family.Rmd
+++ b/05_R_apply_family/Lecture_5_apply_family.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Projecting knowledge in plots'
+title: "Projecting knowledge in plots"
 author: "Bob Settlage"
 date: '`r Sys.Date()`'
 output:
@@ -8,6 +8,7 @@ output:
     fig_height: 6
     fig_width: 4
     smaller: yes
+  beamer_presentation: default
   slidy_presentation: default
 ---
 
@@ -107,7 +108,7 @@ In my experience, plots are crucial in learning about your data.  I make A LOT o
 Free course:
 <https://www.udacity.com/course/data-analysis-with-r--ud651>
 
-"Exploratory data analysis is an approach for summarizing and visualizing the important characteristics of a data set. Promoted by *John Tukey*, exploratory data analysis focuses on exploring data to understand the dataâ€™s underlying structure and variables, to develop intuition about the data set, to consider how that data set came into existence, and to decide how it can be investigated with more formal statistical methods."
+"Exploratory data analysis is an approach for summarizing and visualizing the important characteristics of a data set. Promoted by *John Tukey*, exploratory data analysis focuses on exploring data to understand the data?€™s underlying structure and variables, to develop intuition about the data set, to consider how that data set came into existence, and to decide how it can be investigated with more formal statistical methods."
 
 Velleman, Paul and Hoaglin, David (1981), The ABC's of EDA: Applications, Basics, and Computing of Exploratory Data Analysis, Duxbury.
 
